# SnakesSegmentation

./: .gitignore  CMakeLists.txt  README.md  point.cxx  point.h  snakeFilter.cxx  snakeFilter.h  snakeObserver.cxx  snakeObserver.h  snakes.cxx  snakes.h  snakesClient.cxx  snakesClientMouse.cxx  snakesClientMouse2.cxx
